# Agra

./: correlatedGeneralPricer.py  exampleGeneralPricer.py  exampleOptionPricer.py  genealPricer.py  optionPricing.py  pricing.ipynb  pyproject.toml  testing.ipynb
data/: RSETH_1Y_graph_coinmarketcap.csv  WETH_1Y_graph_coinmarketcap.csv
